:issue: https://github.com/elastic/beats/issues/
:pull: https://github.com/elastic/beats/pull/

////////////////////////////////////////////////////////////
// Template, add newest changes here

=== Beats version HEAD
https://github.com/elastic/beats/compare/v5.4.1...master[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Bugfixes

*Affecting all Beats*
- Fix console output {pull}4045[4045]

- Usage of field `_type` is now ignored and hardcoded to `doc`. {pull}3757[3757]
- Normalize all times to UTC to ensure proper index naming. {issue}4569[4569]

*Filebeat*

- Fix modules default file permissions. {pull}3879[3879]
- Properly shut down crawler in case one prospector is misconfigured. {pull}4037[4037]
- Fix importing the dashboards when the limit for max open files is too low. {issue}4244[4244]
- Fix issue where the `fileset.module` could have the wrong value. {issue}4761[4761]

*Filebeat*
- Fix issue that new prospector was not reloaded on conflict {pull}4128[4128]
- Fix grok pattern in filebeat module system/auth without hostname. {pull}4224[4224]
- Fix the Mysql slowlog parsing of IP addresses. {pull}4183[4183]
- Allow string characters in user agent patch version (NGINX and Apache) {pull}4415[4415]

*Filebeat*

*Heartbeat*

*Metricbeat*
- Fix a debug statement that said a module wrapper had stopped when it hadn't. {pull}4264[4264]
- Use MemAvailable value from /proc/meminfo on Linux 3.14. {pull}4316[4316]
- Fix panic when events were dropped by filters. {issue}4327[4327]
- Add filtering to system filesystem metricset to remove relative mountpoints like those
  from Linux network namespaces. {pull}4370[4370]

- Fix type of field `haproxy.stat.check.health.last`. {issue}4407[4407]

*Packetbeat*

- Clean configured geoip.paths before attempting to open the database. {pull}4306[4306]